# rv6

./: .gdbinit  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  debug.sh  rust-toolchain.toml
.cargo/: config.toml
config/: Cargo.toml
config/.cargo/: config.toml
config/src/: lib.rs
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  console.rs  context.rs  graphics.rs  lib.rs  loader.rs  logging.rs  main.rs  memlayout.rs  os.ld  proc.rs  sbi.rs  sched.rs  stdio.rs  sync.rs  syscall.rs  task.rs  trap.rs  util.rs  virtio.rs  vm.rs
kernel/src/asm/: start.S  swtch.S  trap.S
kernel/src/fs/: block.rs  file.rs  inode.rs  mod.rs  path.rs
kernel/src/io/: graphics.rs  mod.rs  stdio.rs  virtio.rs
kernel/src/mm/: allocator.rs  mod.rs  vm.rs
kernel/src/trap/: handler.rs  mod.rs  plic.rs  timer.rs
kernel/tests/: basic.rs  fs.rs  trivial.rs
mkfs/: Cargo.toml
mkfs/src/: main.rs
src/: console.rs  context.rs  lib.rs  logging.rs  main.rs  os.ld  sbi.rs
src/asm/: start.S  trap.S
src/device/: console.rs  mod.rs
tests/: trivial.rs
user/: Cargo.toml
user/.cargo/: config.toml
user/src/: fs.rs  lib.rs
