[workspace]

members = [
    "kernel",
    "user",
    "config",
]
resolver = "2"

[workspace.package]
authors = ["Qi Zhan <qizhan@zju.edu.cn>"]
repository = "https://github.com/SIG-SPL/rv6"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" 

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" 
