[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.9.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4.18"
riscv = "0.10.1"
virtio-drivers = "0.5.0"
fdt = "0.1.4"
config = {path = "../config"}

[features]
graphics = []